# simple-statistical-functions

./: README.md  main.cpp  mean.hpp  meson.build  quantile.hpp  stats.hpp
docker_build/: README.md  docker-compose.yml  docker_build_and_run.sh  docker_clean.sh  docker_install_apt.sh  docker_shell.sh
docker_build/builder/: Dockerfile  build.sh  build_and_run.sh  run.sh  test.sh
testing/: test_of_ranges_test.cpp
